corrected header alignment to be dynamic

--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -3,6 +3,7 @@
 .header{
   position: absolute;
   top: 0;
+  left: -4rem;
 }
 
 .nav-bar{
